--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <li>Reading books</li>
     <hr>
   </ol>
-  <h3><a href="Contact_me.html/"><body>Contact me</a></h3>
+  <h3><a href="Contact_me.html"><body>Contact me</a></h3>
 
     <h3>Work experience</h3>
     <table border="1">
